replaced bs modal with material modal

--- a/angular-web-app/src/index.html
+++ b/angular-web-app/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body id="page-top">
-<app-root></app-root>
+<app-root id="app-root"></app-root>
 <!-- Third party plugin JS-->
 </body>
 
