--- a/angular-web-app/src/index.html
+++ b/angular-web-app/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Spavento Paintings</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico">
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
