--- a/angular-web-app/src/index.html
+++ b/angular-web-app/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Spavento Paintings</title>
@@ -9,12 +10,14 @@
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="page-top">
-<app-root id="app-root"></app-root>
-<!-- Third party plugin JS-->
+  <app-root id="app-root"></app-root>
+  <!-- Third party plugin JS-->
 </body>
 
 </html>
