--- a/angular-web-app/src/index.html
+++ b/angular-web-app/src/index.html
@@ -6,7 +6,7 @@
   <title>Spavento Paintings</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon/favicon.ico">
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
